Changed nav bar looks and add consultation view template

--- a/templates/admin/consultations_list.html
+++ b/templates/admin/consultations_list.html
@@ -50,6 +50,7 @@
                                     Assign Expert
                                 </button>
                                 {% endif %}
+                                <a href="{{ url_for('expert.admin_view_consultation', consultation_id=consultation.id) }}" class="btn btn-sm btn-secondary ms-2">View</a>
                             </td>
                         </tr>
 
