--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -104,6 +104,14 @@
                                 </div>
                             </a>
                         </div>
+                        <div class="col-md-3 text-center mb-3">
+                            <a href="{{ url_for('admin.consultations_list') }}" class="text-decoration-none">
+                                <div class="p-3 rounded bg-light">
+                                    <i class="bi bi-chat-dots fs-1 text-info"></i>
+                                    <h5 class="mt-2">Consultations</h5>
+                                </div>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
